--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "gemini-api": "^2.0.4",
     "uuid": "^9.0.1"
   }
 }
