--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rimraf": "^5.0.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.3.0"
   }
 }
