--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "@google/generative-ai": "^0.11.5",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
