--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@types/sqlite3": "^3.1.11",
@@ -20,10 +21,11 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "@google/generative-ai": "^0.11.5",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "gemini-api": "^2.0.4",
     "node-fetch": "^3.3.2",
     "node-fetch-commonjs": "^3.3.2",
